update submit button naming

--- a/quiz.html
+++ b/quiz.html
@@ -12,7 +12,7 @@
     <!-- (B) QUIZ CONTAINER -->
     <div id="quizWrap"></div>
     <div class="trailsButtonWrapper">
-      <button class="trailsQuizSubmit" type="button" id="submitButton">Submit</button>
+      <button class="trailsQuizSubmit" type="button" id="submitButton">Start</button>
     </div>
   </body>
   <!-- (A) LOAD QUIZ CSS + JS -->
