--- a/quiz.html
+++ b/quiz.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <!-- (B) QUIZ CONTAINER -->
+    <div class="trailsTimer" id="timer"></div>
     <div id="quizWrap"></div>
     <div class="trailsButtonWrapper">
       <button class="trailsQuizSubmit" type="button" id="submitButton">Start</button>
