refactored classes, changed instructions to zh-cn, added audio question type

--- a/quiz.html
+++ b/quiz.html
@@ -6,7 +6,7 @@
     <div class="trailsTimer" id="timer"></div>
     <div id="quizWrap"></div>
     <div class="trailsButtonWrapper">
-      <button class="trailsQuizSubmit" type="button" id="submitButton">Start</button>
+      <button class="trailsQuizSubmit" type="button" id="submitButton">开始</button>
     </div>
   </body>
   <!-- (A) LOAD QUIZ CSS + JS -->
