--- a/quiz.html
+++ b/quiz.html
@@ -5,8 +5,10 @@
     <!-- (B) QUIZ CONTAINER -->
     <div class="trailsTimer" id="timer"></div>
     <div id="quizWrap"></div>
-    <div class="trailsButtonWrapper">
-      <button class="trailsQuizSubmit" type="button" id="submitButton">开始</button>
+    <div class="footer">
+      <div class="submit">
+          <button type="submit" id="submitButton">开始</button>
+      </div>
     </div>
   </body>
   <!-- (A) LOAD QUIZ CSS + JS -->
