--- a/quiz.html
+++ b/quiz.html
@@ -3,7 +3,8 @@
   <meta charset="utf-8">
   <body>
     <!-- (B) QUIZ CONTAINER -->
-    <div class="trailsTimer" id="timer"></div>
+    <!-- <div class="trailsTimer" id="timer"></div> -->
+    <div id="timer"></div>
     <div id="quizWrap"></div>
     <div class="footer">
       <div class="submit">
